@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.3.2 (pending)
 ==========================
 
+- Avoid possible recursive loops in topology traversal code
 - Always use the absolute path for saved topology files
 
 Release 0.3.1 (2016-03-06)
